k8s/client/templates/ingress-config.yaml
# In regex...
# the ? means the same thing as .
# the . means "match any character"
# the * means "match zero or more of the preceding character"
# the () means "capture the matched string as a group"

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: "Prefix"
            backend:
              service:
                name: client-cluster-ip
                port:
                  number: 3000
          - path: /api/users/?(.*)
            pathType: "Prefix"
            backend:
              service:
                name: auth-cluster-ip
                port:
                  number: 3000
        # - path: /api/payments/?(.*)
        #   pathType: "Prefix"
        #   backend:
        #     service:
        #       name: payments-cluster-ip
        #       port:
        #         number: 3000
        # - path: /api/tickets/?(.*)
        #   pathType: "Prefix"
        #   backend:
        #     service:
        #       name: tickets-cluster-ip
        #       port:
        #         number: 3000
        # - path: /api/orders/?(.*)
        #   pathType: "Prefix"
        #   backend:
        #     service:
        #       name: orders-cluster-ip
        #       port:
        #         number: 3000
